--- a/src/components/LatestBlogStyles.css
+++ b/src/components/LatestBlogStyles.css
@@ -1,29 +1,32 @@
 .blog-page{
-    width: 100vw;
-    height: 100vh;
+    width: 98vw;
 }
 .blog-layout{
     display: flex;
+    
 }
 .category-section{
     display: flex;
     flex-direction: column;
     text-align: center;
-    width: 15%;
+    width: 20%;
     margin-top: 20px;
     row-gap: 20px;
 }
 .blogs-section {
-    width: 70%;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  justify-content: space-between; 
+}
+
+.cards{
+    display: flex; 
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+}
   
-  .blog-card {
-    width: calc(33.33% - 20px); 
-    max-height: 5px;
-    margin-bottom: 20px;
-  }
-  
-  /* Responsive layout adjustments */
   @media only screen and (max-width: 768px) {
     .blog-layout {
       flex-direction: column;
@@ -33,8 +36,7 @@
     .blogs-section {
       width: 100%;
     }
-  
-    /* Adjust the width for mobile screens */
+
     .blog-card {
       width: 100%;
     }
