--- a/src/components/LatestBlogStyles.css
+++ b/src/components/LatestBlogStyles.css
@@ -3,42 +3,71 @@
 }
 .blog-layout{
     display: flex;
+    justify-content: center;
     
 }
 .category-section{
+  width: 10%;
+}
+.category-heading{
+  text-align:center;
+  margin-left:20px
+}
+.categories{
     display: flex;
     flex-direction: column;
     text-align: center;
-    width: 20%;
+    
     margin-top: 20px;
+    margin-left: 20px;
     row-gap: 20px;
 }
 .blogs-section {
   display: flex;
   flex-wrap: wrap;
-  width: 80%;
-  justify-content: space-between; 
+  width: 90%;
+  justify-content: flex-end; 
 }
 
 .cards{
     display: flex; 
     flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
+    /* justify-content: center; */
+    margin-left: 80px;
+    gap: 1px;
 }
-  
+.btn-container{
+  margin: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
   @media only screen and (max-width: 768px) {
     .blog-layout {
       flex-direction: column;
     }
-  
+    
     .category-section,
     .blogs-section {
       width: 100%;
+      justify-content: center;
     }
 
     .blog-card {
       width: 100%;
+    }
+    .cards{
+      margin-left: 0px;
+    }
+    .categories{
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+    }
+    .category-heading{
+      margin-left: 0px;
     }
   }
   
