--- a/src/components/LatestBlogStyles.css
+++ b/src/components/LatestBlogStyles.css
@@ -7,7 +7,7 @@
     
 }
 .category-section{
-  width: 10%;
+  width: 20%;
 }
 .category-heading{
   text-align:center;
@@ -25,15 +25,14 @@
 .blogs-section {
   display: flex;
   flex-wrap: wrap;
-  width: 90%;
-  justify-content: flex-end; 
+  width: 80%;
+  justify-content: center; 
 }
 
 .cards{
     display: flex; 
     flex-wrap: wrap;
-    /* justify-content: center; */
-    margin-left: 80px;
+    justify-content: center;
     gap: 1px;
 }
 .btn-container{
