--- a/src/components/SingleBlogPostStyles.css
+++ b/src/components/SingleBlogPostStyles.css
@@ -27,7 +27,6 @@
   .blog-image {
     margin-top: 20px;
     width: 100%;
-    height: 80vh;
   }
   
   .blog-description {
@@ -45,3 +44,18 @@
   .related-blogs{
     margin-top: 40px;
   }
+  .related-blogs{
+    display: flex;
+    justify-content: center;
+  }
+  @media (max-width: 768px) {
+    .single-blog-post{
+      margin-left: 30px;
+      margin-right: 30px;
+    }
+    .related-blogs{
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+}
