Updated search component and inserted search icon inisde search bar

--- a/src/components/SearchBarStyles.css
+++ b/src/components/SearchBarStyles.css
@@ -1,12 +1,30 @@
-.search-button{
-    border-radius: 10px;
-    background: #FCEE21;
-    width: 80px;
-    height: 35px
-}
+.search-bar {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 250px;
+  }
+.search-bar-input {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    font-size: 16px;
+  }
+  .search-icon {
+    position: absolute;
+    right: 6px;
+    top: 6px;
+    cursor: pointer;
+    font-size: 18px;
+  }
+
 .result-dialog-box{
     width: '400px';
     height: '400px';
     overflow: 'auto';
     border: '1px solid #ccc'
+}
+@media (max-width: 768px) {
+    
 }
