--- a/src/components/SearchBarStyles.css
+++ b/src/components/SearchBarStyles.css
@@ -13,7 +13,7 @@
   }
   .search-icon {
     position: absolute;
-    right: 6px;
+    right: 0px;
     top: 6px;
     cursor: pointer;
     font-size: 18px;
@@ -26,5 +26,10 @@
     border: '1px solid #ccc'
 }
 @media (max-width: 768px) {
-    
+  .search-bar {
+    width: 140px;
+  }
+  .search-icon {
+    display: none;
+  }
 }
