Fixed search bar for header

--- a/src/components/HeaderStyles.css
+++ b/src/components/HeaderStyles.css
@@ -10,6 +10,11 @@
     background: linear-gradient(90deg, #183114 0%, #446129 100%);
     backdrop-filter: blur(10px);
 }
+.dive-into-skills-heading{
+    font-size: 24px;
+    font-weight: 700; 
+    color: #FCEE21;
+}
 .search-bar-comp{
     padding-top: 30px;
 }
@@ -36,7 +41,12 @@
     display: none;
 }
 @media screen and (max-width: 1040px) {
-
+    .dive-into-skills-heading{
+        display: none;
+    }
+    .header {
+        justify-content:space-between
+    }
     .nav-menu {
         flex-direction: column;
         justify-content: center;
@@ -58,9 +68,9 @@
         padding:1rem 0;
         font-size: 28px;
     }
-    .search-bar-comp{
+    /* .search-bar-comp{
         margin-left: 100px;
-    }
+    } */
     .hamsburger{
         display: initial;
     }
