--- a/src/components/NewsLetterPopUpStyles.css
+++ b/src/components/NewsLetterPopUpStyles.css
@@ -15,7 +15,7 @@
 
 .newsletter-popup {
     width: 700px;
-    height: 250px;
+    height: 220px;
     display: flex;
     border-radius: 20px;
     background: linear-gradient(90deg, #183114 0%, #446129 100%);
@@ -50,36 +50,38 @@
 
 /* SubscribeForm.css */
 
-.subscribe-form {
-    display: flex;
-    align-items: center;
-}
-
 .input-container {
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 10px;
     height: 50px;
 }
 
 .email-input {
-    padding: 10px;
+    padding: 10px; 
     border: 2px solid #FCEE21;
-    border-radius: 50px;
-    width: 400px;
+    border-radius: 50px 0 0 50px;
+    width: 240px;  
+    color: #FCEE21;
+    background: #446129;
+    
+}
+.email-input::placeholder{
+    color: #FCEE21;
 }
 
 .subscribe-button {
-    position: absolute;
-    top: 0;
-    right: 0;
     padding: 10px;
-    border-radius: 50px;
+    border-radius: 0px 50px 50px 0px;
+    border: none;
     border: 2px solid #FCEE21;
     background: #FCEE21;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    width: 150px;
+    width: 100px;
 }
+
 
 @media (max-width: 768px) {
     .newsletter-popup {
@@ -95,7 +97,12 @@
     .newsletter-popup {
         width: 100%;
     }
-
+    .email-input{
+        width: 200px;
+    }
+    .subscribe-button {
+        width: 80px;
+    }
     .txt-color {
         text-align: center;
     }
