--- a/src/components/SingleBlogPost/SingleBlogPostStyles.css
+++ b/src/components/SingleBlogPost/SingleBlogPostStyles.css
@@ -58,4 +58,9 @@
       justify-content: center;
       align-items: center;
     }
+    .social_media_icons{
+    
+      gap: 3px;
+      
+    }
 }
