--- a/src/pages/Home/HomeStyles.css
+++ b/src/pages/Home/HomeStyles.css
@@ -2,8 +2,8 @@
     display:flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding-left: 20px;
-    padding-right: 20px;
+    /* padding-left: 15px;
+    padding-right: 15px; */
     
 }
 .remove-decoration{
