Almost all done

--- a/src/components/LatestBlogs/LatestBlogStyles.css
+++ b/src/components/LatestBlogs/LatestBlogStyles.css
@@ -6,6 +6,16 @@
     justify-content: center;
     
 }
+.card-hover{
+  transition: transform 0.3s ease
+}
+.card-hover:hover{
+  transform: translateY(-8px);
+}
+.cards>a{
+  text-decoration: none;
+  color: black;
+}
 .category-section{
   width: 20%;
 }
