--- a/src/components/Contact/ContactStyles.css
+++ b/src/components/Contact/ContactStyles.css
@@ -1,17 +1,17 @@
 .contact-container {
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 92vh;
     background-color: #183114;
     overflow-x: hidden;
     justify-content: space-between;
+    overflow-x: hidden;
 }
 
 .left-section {
     width: 50%;
     padding: 25px 80px 50px 50px;
 }
-
 
 .address {
     display: flex;
@@ -31,17 +31,16 @@
     width: 50%;
     background: #446129;
     
-}
-.container {
-    width: 100%;
+
     
 }
 
 .form-container {
     width: 100%;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    /* padding: 20px; */
+    overflow-x: hidden;
+    overflow-y: hidden;
+
 }
 
 .color {
@@ -63,15 +62,18 @@ label {
 textarea {
     padding: 10px;
     margin-bottom: 16px;
+    border: none;
+    outline: none;
     border-radius: 10px;
     border: 2px solid #FCEE21;
     margin-bottom: 30px;
     color: #FCEE21;
     background: #446129;
+
 }
 
-textarea {
-    resize: vertical;
+.textarea {
+    max-height: fit-content;
 }
 
 .input::placeholder,
