--- a/src/pages/Home/HomeStyles.css
+++ b/src/pages/Home/HomeStyles.css
@@ -1,9 +1,11 @@
 .Latest-blog-cards{
+    width: 100%;
     display:flex;
     flex-wrap: wrap;
     justify-content: center;
-    /* padding-left: 15px;
-    padding-right: 15px; */
+    padding-left: 10px;
+    padding-right: 10px;
+    
     
 }
 
