--- a/src/components/SingleBlogPost/SingleBlogPostStyles.css
+++ b/src/components/SingleBlogPost/SingleBlogPostStyles.css
@@ -53,10 +53,19 @@
       margin-left: 30px;
       margin-right: 30px;
     }
-    .related-blogs{
-      flex-direction: column;
-      justify-content: center;
+    .related-blogs {
+      display: flex;
+      overflow-x: scroll;
+      justify-content: flex-start; 
       align-items: center;
+    
+      -webkit-overflow-scrolling: touch; 
+    }
+    
+    .related-blogs > div {
+      flex: 0 0 auto;
+      margin-right: 25px;
+      margin-left: 40px;
     }
     .social_media_icons{
       gap: 10px;
