Added category over image

--- a/src/components/Card/CardBuilderStyles.css
+++ b/src/components/Card/CardBuilderStyles.css
@@ -1,5 +1,5 @@
 .card {
-    width: 270px;
+    width: 240px;
     border: 1px solid #ddd;
     border-radius: 8px;
     overflow: hidden;
@@ -9,9 +9,37 @@
   
   .card-image {
     width: 100%;
-    height: 170px;
+    height: 140px;
     object-fit: cover;
   }
+  .image_container {
+    position: relative;
+    display: inline-block;
+  }
+  .card-image {
+    width: 100%;
+    height: 140px;
+    object-fit: cover;
+  }
+  .category-text{
+    display: flex;
+    position: absolute;
+    right: 40px;
+    bottom: 0;
+    left: 0;
+    border: 1px solid black;
+    border-radius: 0px 20px 20px 0px;
+    background: #183114;
+    padding: 10px;
+    margin-bottom: 10px;
+    color: #FCEE21; 
+    font-size: 16px;
+    justify-content: center;
+    align-items: center;
+    height: 28px;
+    width: 100px;
+  }
+  
   
   .card-content {
     background-color: #DCDE9F;
@@ -25,7 +53,7 @@
   
   .card-description {
     color: black;
-    font-size: 0.9em;
+    font-size: 0.7em;
   }
   
   .card-footer {
