--- a/src/pages/Home/HomeStyles.css
+++ b/src/pages/Home/HomeStyles.css
@@ -1,3 +1,6 @@
+.hero-section-for-mobile{
+    display: none;
+}
 .Latest-blog-cards{
     width: 100%;
     display:flex;
@@ -5,10 +8,7 @@
     justify-content: center;
     padding-left: 10px;
     padding-right: 10px;
-    
-    
 }
-
 .remove-decoration{
     color: black;
     transition: transform 0.3s ease
@@ -17,6 +17,12 @@
     transform: translateY(-8px);
 }
 @media (max-width: 768px) {
+    .hero-section-for-desktop{
+        display: none;
+    }
+    .hero-section-for-mobile{
+        display: initial;
+    }
     .Latest-blog-cards{
         flex-direction: column;
         align-items: center;
