--- a/src/components/SingleBlogPost/SingleBlogPostStyles.css
+++ b/src/components/SingleBlogPost/SingleBlogPostStyles.css
@@ -42,18 +42,27 @@
     cursor: pointer;
   }
   .related-blogs{
-    margin-top: 0px;
+    height: 800px;
+    width: 100%;
+    overflow-x:hidden ;
   }
-  .related-blogs{
+  /* .related-blogs{
     display: flex;
     justify-content: center;
-  }
+  } */
   @media (max-width: 768px) {
     .single-blog-post{
       margin-left: 30px;
       margin-right: 30px;
     }
-    .related-blogs {
+    .related-blogs{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+    }
+    /* .related-blogs {
       display: flex;
       overflow-x: scroll;
       justify-content: flex-start; 
@@ -65,7 +74,7 @@
       flex: 0 0 auto;
       margin-right: 25px;
       margin-left: 35px;
-    }
+    } */
     .social_media_icons{
       gap: 10px;
       
