--- a/src/components/SingleBlogPost/SingleBlogPostStyles.css
+++ b/src/components/SingleBlogPost/SingleBlogPostStyles.css
@@ -1,11 +1,12 @@
 .single-blog-post {
-    margin-left: 60px;
-    margin-right: 60px;
+    margin-left: 30px;
+    margin-right: 30px;
   }
   
   .author-section {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-top: 20px;
   }
   
