--- a/src/components/SingleBlogPost/SingleBlogPostStyles.css
+++ b/src/components/SingleBlogPost/SingleBlogPostStyles.css
@@ -27,7 +27,10 @@
   }
   .blog-image {
     margin-top: 20px;
+    padding: 0px 20px 0px 20px;
+    height: 600px;
     width: 100%;
+    object-fit: cover;
   }
   
   .blog-description {
@@ -95,6 +98,13 @@
     }
     .swiper-button-next{
       display: none !important;
+    }
+    .blog-image {
+      margin-top: 20px;
+      padding: 0px 20px 0px 20px;
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
     }
    
   }
