--- a/src/components/SearchBar/SearchBarStyles.css
+++ b/src/components/SearchBar/SearchBarStyles.css
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    width: 250px;
+    width: 330px;
   }
 .search-bar-input {
     width: 100%;
@@ -10,21 +10,21 @@
     border: none;
     border-bottom: 1px solid #FCEE21;
     outline: none;
-    font-size: 16px;
+    font-size: 26px;
     color: #FCEE21;
     background: transparent;
     padding-right: 45px;
   }
   .search-bar-input::placeholder{
     color: #FCEE21;
-    font-size: 20px;
+    font-size: 30px;
   }
   .search-icon {
     position: absolute;
     right: 0px;
     top: 6px;
     cursor: pointer;
-    font-size: 18px;
+    font-size: 28px;
   }
 
 .result-dialog-box{
@@ -41,6 +41,12 @@
   }
   .search-icon {
     display: none;
+  }
+  .search-bar-input {
+    font-size: 20px;
+  }
+  .search-bar-input::placeholder{
+    font-size: 20px;
   }
 }
 
