--- a/src/components/Header/HeaderStyles.css
+++ b/src/components/Header/HeaderStyles.css
@@ -23,9 +23,9 @@
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.6);
     transition: 0.2s;
 }
-/* .search-bar-comp{
-    margin-left: 50px;
-} */
+.search-bar-comp{
+    margin-bottom: 10px;
+}
 .nav-menu {
     display: flex;
     justify-content: center;
