--- a/src/components/Card/CardBuilderStyles.css
+++ b/src/components/Card/CardBuilderStyles.css
@@ -1,15 +1,14 @@
 .card {
-    width: 240px;
+    width: 300px;
     border: 1px solid #ddd;
-    border-radius: 8px;
+    border-radius: 15px;
     overflow: hidden;
-    margin: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
   .card-image {
     width: 100%;
-    height: 140px;
+    height: 180px;
     object-fit: cover;
   }
   .image_container {
@@ -41,17 +40,19 @@
   }
   
   .card-title {
-    font-size: 1em;
+    font-size: 1.4em;
     margin-bottom: 8px;
+    color: #183114;
   }
   
   .card-description {
     color: black;
-    font-size: 0.7em;
+    font-size: 1em;
     overflow: hidden;
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3; 
+    -webkit-line-clamp: 4; 
+    color: #446129;
     
   }
   
@@ -60,6 +61,7 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 16px;
+    color: #446129;
   }
   
   .card-data {
