--- a/src/pages/Home/HomeStyles.css
+++ b/src/pages/Home/HomeStyles.css
@@ -6,8 +6,7 @@
     display:flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding-left: 10px;
-    padding-right: 10px;
+    gap: 15px;
 }
 .remove-decoration{
     color: black;
