--- a/src/components/Contact/ContactStyles.css
+++ b/src/components/Contact/ContactStyles.css
@@ -10,21 +10,24 @@
 
 .left-section {
   width: 50%;
-  padding: 25px 80px 50px 50px;
+  padding: 20px 80px 50px 50px;
 }
 
 .address {
   display: flex;
   gap: 30px;
-  margin-top: 20px;
   align-items: center;
 }
 
 .address-box {
-  margin-top: 180px;
+  margin-top: 240px;
 }
-
+.tuxt{
+  text-align: center;
+  color: #dcde9f;
+}
 .text {
+  padding-top: 30px;
   color: #dcde9f;
 }
 .right-section {
@@ -69,7 +72,7 @@ textarea {
 
 .textarea {
   max-height: fit-content;
-  width: 300px;
+  width: 330px;
   height: 150px;
   resize: none;
 }
