--- a/src/components/NewsLetterPopUp/NewsLetterPopUpStyles.css
+++ b/src/components/NewsLetterPopUp/NewsLetterPopUpStyles.css
@@ -56,7 +56,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 10px;
-    height: 50px;
+    height: 0px;
     border: 2px solid #FCEE21;
     border-radius: 50px;
     overflow: hidden;
@@ -131,11 +131,16 @@
         font-size: 16px;
     }
     .subscribe-button {
-        width: 140px;
+        width: 120px;
         font-size: 16px;
     }
     .txt-color-p {
         font-size: 16px;
+    }
+    .input-container {
+       
+        height: 40px;
+        
     }
     
    
