--- a/src/components/LatestBlogs/LatestBlogStyles.css
+++ b/src/components/LatestBlogs/LatestBlogStyles.css
@@ -1,3 +1,10 @@
+.latest-blog-heading{
+  text-align: center;
+   padding: 80px;
+   color:#183114;
+    font-weight:bold;
+   font-size:40px
+}
 .blog-page{
     width: 98vw;
 }
@@ -21,18 +28,22 @@
 }
 .category-heading{
   text-align:center;
-  margin-left:20px
+  margin-left:20px;
+  font-weight: bold;
+  font-size: 28px;
 }
 .categories{
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin-top: 20px;
     margin-left: 20px;
     row-gap: 20px;
     
 }
-
+.each-category{
+  font-size: 25px;
+  margin-top: 30px;
+}
 .blogs-section {
   display: flex;
   flex-wrap: wrap;
@@ -44,7 +55,7 @@
     display: flex; 
     flex-wrap: wrap;
     justify-content: center;
-    gap: 1px;
+    gap: 15px;
 }
 .btn-container{
   margin: 20px;
@@ -76,6 +87,9 @@
   width: 50%;
 } */
   @media only screen and (max-width: 768px) {
+    .latest-blog-heading{
+      padding: 20px;
+    }
     .blog-layout {
       flex-direction: column;
     }
@@ -85,7 +99,9 @@
       width: 100%;
       justify-content: center;
     }
-
+    .category-section{
+      margin-bottom: 25px;
+    }
     .blog-card {
       width: 100%;
     }
