--- a/src/components/About/AboutStyles.css
+++ b/src/components/About/AboutStyles.css
@@ -1,5 +1,6 @@
 .container{
-    padding: 50px 150px 0px 150px
+    padding: 50px;
+    height: auto;
     
 }
 .About-container{
@@ -7,7 +8,16 @@
     justify-content: space-between;
     align-items: center;
    
-    
+}
+  .about-section-heading{
+    text-align: center;
+    color:'black';
+    font-size: 3em;
+    margin: 20px;
+    font-weight: bold;
+  }
+  .about-section-p{
+    font-size: 2em;
   }
   
   .txtContainer {
@@ -20,22 +30,23 @@
     justify-content: center;
     gap: 10px;
     padding-bottom: 50px;
+  } 
+  .imageContainer >img {
+    width: 400px;
+    height: 400px;
   }
- 
-  /*.imageContainer {
-    width: 50%;
-  } */
-  
-  
-  img {
-    width: 100%;
+  .image-Container >img {
+    width: 400px;
     height: auto;
   }
-  
+  .author-name{
+    font-size: 3em;
+    font-weight: bold;
+  }
   @media (max-width: 768px) {
     .container {
-        padding: 20px 15px 10px 15px
-        
+        padding: 20px 15px 10px 15px;
+        height: auto;
     }
     .About-container{
         display: flex;
@@ -50,6 +61,24 @@
       .socialMediaLinks{
         gap: 5px;
       }
-  
+      .about-section-heading{
+        font-size: 1.5em;
+        font-weight: bold;
+      }
+      .imageContainer >img {
+        width: 250px;
+        height: 250px;
+      }
+      .image-Container >img {
+        width: 250px;
+        height: 300px;
+      }
+      .about-section-p{
+        font-size: 1em;
+      }
+      .author-name{
+        font-size: 1.5em;
+        font-weight: bold;
+      }
     
   }
