--- a/src/components/Contact/ContactStyles.css
+++ b/src/components/Contact/ContactStyles.css
@@ -1,52 +1,60 @@
 .contact-container {
   display: flex;
   width: 100%;
-  height: 92vh;
+  height: auto;
   background-color: #183114;
-  overflow-x: hidden;
   justify-content: space-between;
-  overflow-x: hidden;
+  
 }
 
 .left-section {
   width: 50%;
-  padding: 20px 80px 50px 50px;
-}
-
-.address {
-  display: flex;
-  gap: 30px;
-  align-items: center;
-}
-
-.address-box {
-  margin-top: 240px;
-}
-.tuxt{
-  text-align: center;
-  color: #dcde9f;
-}
-.text {
-  padding-top: 30px;
-  color: #dcde9f;
+  padding: 0px 50px 0px 50px;
 }
 .right-section {
   width: 50%;
   background: #446129;
 }
-
-.form-container {
-  width: 100%;
-  border-radius: 10px;
-  overflow-x: hidden;
-  overflow-y: hidden;
-}
-
-.color {
+.left-section-text {
   color: #dcde9f;
-  margin-bottom: 20px;
-}
+  font-size: 3.2em;
+  font-weight: bolder;
+  padding-top: 80px;
 
+}
+.left-section-p{
+  color: #DCDE9F;
+  font-size: 1.8em;
+  padding-top: 50px;
+}
+.address-box {
+  padding-top: 200px;
+}
+.address {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  margin-top: 30px;
+}
+.tuxt{
+  text-align: center;
+  color: #dcde9f;
+  font-size: 1.9em;
+}
+.right-section-text{
+  color: #dcde9f;
+  font-size: 3.2em;
+  font-weight: bolder;
+  padding-top: 80px;
+  padding-left: 50px;
+}
+.container{
+  padding-left: 50px;
+  padding-top: 20px;
+}
+.form-container{
+  width: 90%;
+}
 form {
   display: flex;
   flex-direction: column;
@@ -60,19 +68,21 @@ label {
 .input,
 textarea {
   padding: 10px;
-  margin-bottom: 16px;
+  margin-bottom: 10px;
   border: none;
   outline: none;
-  border-radius: 10px;
+  border-radius: 15px;
   border: 2px solid #fcee21;
   margin-bottom: 30px;
   color: #fcee21;
   background: #446129;
+  height: 50px;
+  font-size: 1.5em;
 }
 
 .textarea {
   max-height: fit-content;
-  width: 330px;
+  width: 480px;
   height: 150px;
   resize: none;
 }
@@ -80,6 +90,7 @@ textarea {
 .input::placeholder,
 textarea::placeholder {
   color: #fcee21;
+  padding: 20px;
 }
 
 .center {
@@ -87,29 +98,40 @@ textarea::placeholder {
 }
 .button {
   padding: 10px;
-  border-radius: 15px;
   background: #fcee21;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
-  width: 120px;
+  border-radius: 10px;
+  width: 200px;
+  height: 75px;
   transition: background-color 0.3s ease;
 }
 
 .button:hover {
   background-color: #f4fc00;
 }
+.or{
+  font-size: 2em;
+  color: #DCDE9F;
+  padding: 15px;
+}
+.form-social-media-links{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
 @media (max-width: 768px) {
   .contact-container {
     flex-direction: column;
-    height: 100vh;
   }
   .left-section {
     width: 100%;
-    padding: 25px 80px 50px 50px;
+    padding: 25px 50px 50px 50px;
   }
   .right-section {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     width: 100%;
     background: #446129;
@@ -120,4 +142,31 @@ textarea::placeholder {
   .color {
     text-align: center;
   }
+  .textarea {
+    max-height: fit-content;
+    width: 100%;
+    height: 150px;
+    resize: none;
+  }
+  .left-section-text {
+    padding-top: 50px;
+    font-size: 1.8em;
+  }
+  .left-section-p{
+    color: #DCDE9F;
+    font-size: 1.4em;
+    padding-top: 30px;
+  }
+  .tuxt{
+    text-align: start;
+    font-size: 1.4em;
+  }
+  .right-section-text{
+    color: #dcde9f;
+    font-size: 2.2em;
+    font-weight: bolder;
+    padding-top: 30px;
+   
+  }
+  
 }
