--- a/src/components/Contact/ContactStyles.css
+++ b/src/components/Contact/ContactStyles.css
@@ -32,7 +32,7 @@
 }
 .address {
   display: flex;
-  gap: 30px;
+  gap: 20px;
   align-items: center;
   margin-top: 30px;
 }
@@ -82,8 +82,8 @@ textarea {
 
 .textarea {
   max-height: fit-content;
-  width: 480px;
-  height: 150px;
+  width: auto;
+  height: auto;
   resize: none;
 }
 
@@ -106,7 +106,9 @@ textarea::placeholder {
   height: 75px;
   transition: background-color 0.3s ease;
 }
-
+.send-btn{
+  font-size: 40px;
+}
 .button:hover {
   background-color: #f4fc00;
 }
@@ -137,7 +139,7 @@ textarea::placeholder {
     background: #446129;
   }
   .address-box {
-    margin-top: 80px;
+    padding-top: 50px;
   }
   .color {
     text-align: center;
@@ -154,19 +156,24 @@ textarea::placeholder {
   }
   .left-section-p{
     color: #DCDE9F;
-    font-size: 1.4em;
+    font-size: 1.3em;
     padding-top: 30px;
   }
   .tuxt{
     text-align: start;
-    font-size: 1.4em;
+    font-size: 1.3em;
   }
   .right-section-text{
     color: #dcde9f;
-    font-size: 2.2em;
+    font-size: 2em;
     font-weight: bolder;
     padding-top: 30px;
-   
   }
-  
+  .button {
+    width: 150px;
+    height: 55px;
+  }
+  .send-btn{
+    font-size: 20px;
+  }
 }
