--- a/src/pages/Home/HomeStyles.css
+++ b/src/pages/Home/HomeStyles.css
@@ -15,6 +15,17 @@
 .remove-decoration:hover{
     transform: translateY(-8px);
 }
+.buton {
+    padding: 10px;
+    background: #183114;
+    cursor: pointer;
+    border-radius: 10px;
+    width: 200px;
+    height: 75px;
+    color: #FCEE21;
+    font-size: 30px;
+  
+  }
 @media (max-width: 768px) {
     .hero-section-for-desktop{
         display: none;
@@ -26,4 +37,9 @@
         flex-direction: column;
         align-items: center;
     }
+    .buton {
+        width: 150px;
+        height: 55px;
+        font-size: 20px;
+      }
 }
