--- a/src/components/SingleBlogPost/SingleBlogPostStyles.css
+++ b/src/components/SingleBlogPost/SingleBlogPostStyles.css
@@ -1,49 +1,68 @@
 .single-blog-post {
-    margin-left: 30px;
-    margin-right: 30px;
+    padding: 100px 100px 10px 100px;
   }
-  
+  .blog-title{
+    font-size: 3em;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-weight: bolder;
+    
+  }
   .author-section {
+    padding: 30px 0px 30px 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 20px;
   }
   
   .author-info {
     display: flex;
     align-items: center;
+    gap: 20px;
   }
   
   .author-image {
-    width: 40px;
-    height: 40px;
+    width: 75px;
+    height: 80px;
     border-radius: 50%;
-    margin-right: 10px;
   }
-  .blog-title{
-    margin-top: 40px;
-    text-align: center;
+  .author-name-singleBlogPost{
+    font-size: 2em;
+    font-weight: bolder;
+  }
+  .blog-date{
+    font-size: 2em;
+    font-weight: bold;
+  
   }
   .blog-image {
-    margin-top: 20px;
-    padding: 0px 20px 0px 20px;
     height: 600px;
     width: 100%;
     object-fit: cover;
+    border-radius: 20px;
   }
-  
   .blog-description {
-    padding: 20px 0px 20px 0px;
+    padding: 40px 0px 40px 0px;
+    font-size: 2em;
+  }
+  .sharing-is-caring{
+    text-align: center;
+    font-size: 2.5em;
+    font-weight: bolder;
   }
   .social_media_icons{
     display: flex;
     justify-content: center;
+    padding-top: 40px;
     gap: 15px;
-    margin-top: 10px;
   }
   .social_media_icons{
     cursor: pointer;
+  }
+  .Read_Related_Blogs{
+    text-align: center;
+    font-size: 2.5em;
+    font-weight: bolder;
+    padding: 40px 0px 40px 0px;
   }
   .related-blogs{
     width: 100%;
@@ -53,15 +72,23 @@
     display: flex;
     justify-content: center;
   }
+ .Swiper-container-for-desktop{
+  padding-bottom: 50px;
  
-  .Swiper{
-      width: 80%;
-      margin-left: 10%;
-      padding-bottom: 20px;
-  }
-  .Swiper-container{
-    width: 100vw;
-  }
+ }
+ .swiper-initialized{
+  height: 100%;
+ }
+ .Swiper{
+  height: 500px;
+ }
+ .swiper-pagination {
+  margin-bottom: 20px;
+ }
+ .blog-description {
+  padding: 40px 0px 40px 0px;
+  font-size: 1.2em;
+}
   .Swiper-container-for-mobile{
     display: none;
   }
@@ -83,6 +110,46 @@
   display: none;
 }
   @media (max-width: 768px) {
+    .single-blog-post {
+      padding: 40px 40px 8px 40px;
+    }
+    .blog-title{
+      font-size: 1.8em
+    }
+    .author-image {
+      width: 60px;
+      height: 60px;
+    }
+    .author-info {
+      gap: 10px;
+    }
+    .author-name-singleBlogPost{
+      font-size: 1.2em;
+    }
+    .blog-date{
+      font-size: 1.2em;
+    
+    }
+    .blog-image {
+      height: 350px;
+      width: 100%;
+    }
+    .sharing-is-caring{
+      text-align: center;
+      font-size: 1.8em;
+      font-weight: bolder;
+    }
+    .social_media_icons{
+      padding-top: 10px;
+      padding-left: 20px;
+      padding-right: 20px;
+      gap: 8px;
+    }
+    .Read_Related_Blogs{
+      padding: 30px 0px 8px 0px;
+      font-size: 1.8em;
+      font-weight: bolder;
+    }
     .Swiper-container-for-mobile{
       display: initial;
     }
@@ -91,20 +158,13 @@
     }
     
     .Swiper{
-      width: 80%;
+      width: 100%;
     }
     .swiper-button-prev {
         display: none !important;
     }
     .swiper-button-next{
       display: none !important;
-    }
-    .blog-image {
-      margin-top: 20px;
-      padding: 0px 20px 0px 20px;
-      width: 100%;
-      height: 300px;
-      object-fit: cover;
     }
    
   }
