--- a/src/components/LatestBlogs/LatestBlogStyles.css
+++ b/src/components/LatestBlogs/LatestBlogStyles.css
@@ -1,9 +1,9 @@
 .latest-blog-heading{
   text-align: center;
-   padding: 80px;
+   padding: 60px;
    color:#183114;
   font-weight:bold;
-   font-size:40px
+   font-size:3em;
 }
 .blog-page{
     width: 100vw;
@@ -28,7 +28,7 @@
 }
 .category-heading{
   text-align:center;
-  margin-left:20px;
+  padding-left: 50px;
   font-weight: bold;
   font-size: 28px;
 }
@@ -36,7 +36,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin-left: 20px;
+    padding-left: 50px;
     row-gap: 20px;
     
 }
@@ -49,6 +49,7 @@
   flex-wrap: wrap;
   width: 80%;
   justify-content: center; 
+  padding-right: 50px;
 }
 
 .cards{
