--- a/src/components/About/AboutStyles.css
+++ b/src/components/About/AboutStyles.css
@@ -1,9 +1,6 @@
-.container{
+.container1{
   padding-left: 50px;
   padding-right: 50px;
-  
-  padding-top: 60px;
-  padding-bottom: 60px;
   height: auto;
     
 }
@@ -18,6 +15,8 @@
     color:'black';
     font-size: 3em;
     font-weight: bolder;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
   .about-section-p{
     font-size: 2em;
@@ -47,19 +46,21 @@
     font-weight: bold;
   }
   @media (max-width: 768px) {
-    .container {
+    .container1{
         height: auto;
-        padding-top: 40px;
-        padding-bottom: 40px;
+        padding-left: 40px;
+        padding-right: 40px;
     }
     .About-container{
         display: flex;
         flex-direction: column;
       }
-      
+      .about-section-heading{
+        padding-top: 40px;
+        padding-bottom: 30px;
+      }
       .txtContainer {
-        margin-top: 15px;
-        width: 80%;
+        width: 100%;
       }
       .socialMediaLinks{
         gap: 5px;
@@ -82,6 +83,9 @@
       .author-name{
         font-size: 1.5em;
         font-weight: bold;
+      }
+      .socialLinks{
+        padding-top: 30px;
       }
     
   }
