--- a/src/components/LatestBlogs/LatestBlogStyles.css
+++ b/src/components/LatestBlogs/LatestBlogStyles.css
@@ -1,46 +1,44 @@
-.latest-blog-heading{
+.latest-blog-heading {
   text-align: center;
-   padding: 60px;
-   color:#183114;
-  font-weight:bold;
-   font-size:3em;
+  padding: 60px;
+  color: #183114;
+  font-weight: bold;
+  font-size: 3em;
 }
-.blog-page{
-    width: 100vw;
+.blog-page {
+  width: 100vw;
 }
-.blog-layout{
-    display: flex;
-    justify-content: center;
-    
+.blog-layout {
+  display: flex;
+  justify-content: center;
 }
-.card-hover{
-  transition: transform 0.3s ease
+.card-hover {
+  transition: transform 0.3s ease;
 }
-.card-hover:hover{
+.card-hover:hover {
   transform: translateY(-8px);
 }
-.cards>a{
+.cards > a {
   text-decoration: none;
   color: black;
 }
-.category-section{
+.category-section {
   width: 20%;
 }
-.category-heading{
-  text-align:center;
+.category-heading {
+  text-align: center;
   padding-left: 50px;
   font-weight: bold;
   font-size: 28px;
 }
-.categories{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding-left: 50px;
-    row-gap: 20px;
-    
+.categories {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding-left: 50px;
+  row-gap: 20px;
 }
-.each-category{
+.each-category {
   font-size: 25px;
   margin-top: 30px;
 }
@@ -48,84 +46,91 @@
   display: flex;
   flex-wrap: wrap;
   width: 80%;
-  justify-content: center; 
-  padding-right: 50px;
+  justify-content: center;
+  
 }
 
-.cards{
-    display: flex; 
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 15px;
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 15px;
 }
-.btn-container{
+.btn-container {
   margin: 20px;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.category-links li a p{
+.category-links li a p {
   position: relative;
   margin-top: 20px;
   color: black;
 }
-.category-links li a p:hover{
-  color: #5b8336 
+.category-links li a p:hover {
+  color: #5b8336;
 }
-.boton{
+.boton {
   padding: 10px;
   background: #183114;
   cursor: pointer;
   border-radius: 10px;
   width: 200px;
   height: 75px;
-  color: #FCEE21;
+  color: #fcee21;
   font-size: 30px;
 }
-  @media only screen and (max-width: 768px) {
-    .latest-blog-heading{
-      padding: 20px;
-    }
-    .blog-layout {
-      flex-direction: column;
-    }
+@media only screen and (max-width: 768px) {
+  .latest-blog-heading {
+    font-size: 1.8em;
+    font-weight: bolder;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  .blog-layout {
+    flex-direction: column;
+  }
+
+  .category-section,
+  .blogs-section {
+    width: 100%;
+    justify-content: center;
+  }
+  .category-heading {
+    padding-left: 0px;
+  }
+  .categories {
+    margin-top: 0px;
+    margin-left: 0px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 40px;
     
-    .category-section,
-    .blogs-section {
-      width: 100%;
-      justify-content: center;
-    }
-    .category-section{
-      margin-bottom: 25px;
-    }
-    .blog-card {
-      width: 100%;
-    }
-    .cards{
-      margin-left: 0px;
-    }
-    .categories{
-      margin-top: 0px;
-      margin-left: 0px;
-    }
-    .category-links{
-      display: flex;
-      flex-wrap: wrap;
-      gap: 12px;
-      justify-content: center;
-      align-items: center;
-      margin-bottom: 10px;
-    }
-    .category-heading{
-      margin-left: 0px;
-    }
-    .boton{
-      
-        width: 150px;
-        height: 55px;
-        font-size: 20px;
-      
-    }
+  }
+  .each-category {
+    font-size: 1.5em;
+    margin-top: 0px;
+    padding-top: 10px;
   }
   
+  .blog-card {
+    width: 100%;
+  }
+  .cards {
+    margin-left: 0px;
+  }
+  .category-links {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .boton {
+    width: 150px;
+    height: 55px;
+    font-size: 20px;
+  }
+}
