--- a/src/components/Contact/ContactStyles.css
+++ b/src/components/Contact/ContactStyles.css
@@ -34,7 +34,7 @@
   display: flex;
   gap: 20px;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 40px;
 }
 .tuxt{
   text-align: center;
@@ -81,12 +81,13 @@ textarea {
   color: #fcee21;
   background: #446129;
   height: 50px;
+  width: 90%;
   font-size: 1.5em;
 }
 
 .textarea {
   max-height: fit-content;
-  width: auto;
+  width: 90%;
   height: auto;
   resize: none;
 }
@@ -126,6 +127,7 @@ textarea::placeholder {
   justify-content: center;
   align-items: center;
   gap: 10px;
+  padding-bottom: 30px;
 }
 @media (max-width: 768px) {
   .contact-container {
@@ -140,7 +142,7 @@ textarea::placeholder {
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    background: #446129;
+    background: hsl(91, 41%, 27%);
   }
   .address-box {
     padding-top: 50px;
@@ -148,10 +150,13 @@ textarea::placeholder {
   .color {
     text-align: center;
   }
+  .input{
+    width: 100%;
+  }
   .textarea {
     max-height: fit-content;
     width: 100%;
-    height: 150px;
+    height: auto;
     resize: none;
   }
   .left-section-text {
