Fixed newsletter pop up

--- a/src/components/NewsLetterPopUp/NewsLetterPopUpStyles.css
+++ b/src/components/NewsLetterPopUp/NewsLetterPopUpStyles.css
@@ -120,9 +120,9 @@
     .subscribe-button {
         width: 60px;
     }
-    .txt-color {
+    /* .txt-color {
         text-align: center;
-    }
+    } */
     .txt-color-p {
         padding-left: 15px;
         padding-bottom: 10px;
