--- a/src/components/Footer/FooterStyles.css
+++ b/src/components/Footer/FooterStyles.css
@@ -144,3 +144,10 @@
     
     }
 }
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+    .footer{
+        background: #183114;
+        padding: 25px 20px 25px 20px;
+    
+    }
+  }
