Fixed about page in accordance to figma design

--- a/src/components/LatestBlogs/LatestBlogStyles.css
+++ b/src/components/LatestBlogs/LatestBlogStyles.css
@@ -1,9 +1,10 @@
 .latest-blog-heading {
   text-align: center;
-  padding: 60px;
+  padding: 75px;
   color: #183114;
   font-weight: bold;
   font-size: 3em;
+  padding-top: 100px;
 }
 .blog-page {
   width: 100vw;
@@ -29,7 +30,7 @@
   text-align: center;
   padding-left: 50px;
   font-weight: bold;
-  font-size: 28px;
+  font-size: 30px;
 }
 .categories {
   display: flex;
@@ -39,7 +40,7 @@
   row-gap: 20px;
 }
 .each-category {
-  font-size: 25px;
+  font-size: 30px;
   margin-top: 30px;
 }
 .blogs-section {
